se agrego la carpeta vite.config

--- a/detalles.html
+++ b/detalles.html
@@ -17,6 +17,6 @@
     <footer>
         <a href="../index.html">Volver al Inicio</a> <!-- boton para volver al inicio -->
     </footer>
-    <script type="module" src="../src/detalles.js"></script>
+    <script type="module" src="/src/detalles.js"></script>
 </body>
 </html>
