--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <button id="btnSig" disabled>Siguiente</button>
       </div>
  </footer>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
 
