--- a/detalles.html
+++ b/detalles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del Personaje</title>
-    <link rel="stylesheet" href="../src/assets/css/detalles.css">
+    <link rel="stylesheet" href="./src/assets/css/detalles.css">
     <link rel="shortcut icon" href="../src/assets/img/icono final.png" type="image/x-icon">
 </head>
 <body>
