--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Rick y Morty App</title>
-    <link rel="stylesheet" href="./src/assets/css/index.css" />
-    <link rel="shortcut icon" href="./src/assets/img/icono final.png" type="image/x-icon">
+    <link rel="stylesheet" href="/src/assets/css/index.css" />
+    <link rel="shortcut icon" href="/src/assets/img/icono final.png" type="image/x-icon">
   </head>
   <body>
     <header>
