se agregó el responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>Rick y Morty personajes</h1> <!-- titulo principal -->
+      <h1 class="titulo">Rick y Morty personajes</h1> <!-- titulo principal -->
       <div id="filtros"> <!-- filtrado de busqueda -->
         <input type="text" id="inputBusqueda" placeholder="Buscar personaje..." />
       <select id="filtro">
