se agreguo una nueva forma de volver al index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <header>
-      <h1 class="titulo">Rick y Morty personajes</h1> <!-- titulo principal -->
+     <a id="inicio" href="index.html">
+       <h1 class="titulo">Rick y Morty personajes</h1> <!-- titulo principal -->
+     </a>
       <div id="filtros"> <!-- filtrado de busqueda -->
         <input type="text" id="inputBusqueda" placeholder="Buscar personaje..." />
       <select id="filtro">
