se agrego un apartado de episodios

--- a/detalles.html
+++ b/detalles.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del Personaje</title>
     <link rel="stylesheet" href="/src/assets/css/detalles.css">
     <link rel="shortcut icon" href="/src/assets/img/icono final.png" type="image/x-icon">
@@ -10,6 +11,12 @@
 <body>
     <header>
         <h1>Detalles del Personaje</h1> <!-- titulo principal -->
+
+        <!-- loader -->
+        <div id="loader" style="display: none;">
+            <p>Cargando...</p>
+        </div>
+
     </header>
     <main>
         <div id="detallesPersonaje"></div> <!-- card del personaje -->
