se agrego una parte faltante

--- a/episodes.html
+++ b/episodes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Episodes</title>
+    <title>Episodios</title>
     <link rel="stylesheet" href="/src/assets/css/episodios.css">
     <link rel="shortcut icon" href="/src/assets/img/icono final.png" type="image/x-icon">
 </head>
@@ -30,6 +30,6 @@
   <button id="btnSig" disabled>Siguiente</button>
       </div>
     </footer>
-    <script src="/src/episodios.js"></script>
+    <script type="module" src="/src/episodios.js"></script>
 </body>
 </html>
